Modification de la recherche.

--- a/web/views/index.html.twig
+++ b/web/views/index.html.twig
@@ -40,7 +40,7 @@
     <div id="collapseTwo" class="panel-collapse collapse">
       <div class="panel-body">
         <label class="checkbox-inline">
-		<input type="checkbox" id="inlineCheckbox25" value="option31"> Tank Destroyer</br>
+		<input type="checkbox" id="inlineCheckbox25" name="type[]" value="option31"> Tank Destroyer</br>
 		</label>
        <label class="checkbox-inline">
 			<input type="checkbox" id="inlineCheckbox26" value="option32"> Recon</br>
