--- a/web/views/layout.html.twig
+++ b/web/views/layout.html.twig
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="/redac-tech-topic-map/web/css/bootstrap.min.css">
     </head>
 
     <body>
@@ -19,7 +19,7 @@
             <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
             <script src="https://code.jquery.com/jquery.js"></script>
             <!-- Latest compiled and minified JavaScript -->
-            <script src="js/bootstrap.min.js"></script>
+            <script src="/redac-tech-topic-map/web/js/bootstrap.min.js"></script>
         {% endblock %}
     </body>
 </html>
